fixed alignment of developer

--- a/mainPage/static/index.css
+++ b/mainPage/static/index.css
@@ -92,7 +92,7 @@ img {
 
 #whoContent h1 {
 	position: absolute;
-	top: calc(50% - 154px);
+	top: calc(50% - 176px);
 	left: 30px;
 
 	font-weight: 400;
